QC layout bug fix

--- a/eCommerce/quickcart33pro/templates/default.css
+++ b/eCommerce/quickcart33pro/templates/default.css
@@ -167,7 +167,7 @@ float:left;
 	display: none;
 	z-index: 10;
 	position: absolute;
-	top: 80px;
+	top: 81px;
 	right: 0px;
 	background: #f2f2f2 url('img/lang-shadow.gif') left no-repeat;
 	padding: 5px 0px 5px 20px;
